# grepr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: exact_word.md  help.md  invert.md  simple.md
src/: lib.rs  main.rs
test/: test.rs
tests/: pale_blue_dot.txt  tests.rs
