[package]
name = "grepr"
author = "Jon Duesterhoeft. <jon.duesterhoeft@gmail.com>"
version = "0.1.1"
about = "A minimal implementation of grep in Rust."
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = { version = "1.3", features = ["std"] }
colored = { version = "2"}