[package]
name = "grepr"
authors = ["Jon Duesterhoeft <jon.duesterhoeft@gmail.com>"]
version = "0.1.1"
about = "A minimal implementation of grep in Rust."
description = "A minimal implementation of grep in Rust."
edition = "2021"
readme = "README.md"
repository = "https://github.com/jonduesterhoeft/grepr"
license = "MIT"
license_file = "LICENSE"
keywords = ["cli", "grep", "search", "utility"]
exclude = ["/.github"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = { version = "1.3", features = ["std"] }
colored = { version = "2"}